[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
derive_more = "0.99.18"
fast_collections = "0.56.0"
fast_delegate = "0.13.0"
ghost-cell = "0.2.6"
loop-code = "0.5.2"
mio = { version = "1.0.1", features = ["net", "os-poll"] }
polling = "3.7.2"
qcell = "0.5.4"
static-rc = { version = "0.6.1", features = ["compile-time-ratio"] }


[[bench]]
name = "benchmark"
harness = false
