[package]
name = "socket_server"
version = "0.4.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "socket write event polling registration avoiding syscall"
repository = "https://github.com/Bruce0203/fast_collections"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
derive_more = "0.99.18"
fast_collections = "0.59.0"
mio = { version = "1.0.1", features = ["net", "os-poll"] }
qcell = "0.5.4"
httparse = { version = "1.9.4", optional = true }
sha1 = { version = "0.10.6", optional = true }
data-encoding = { version = "2.6.0", optional = true }

[features]
default = ["websocket"]
websocket = ["dep:sha1", "dep:httparse", "dep:data-encoding"]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
